Safari bug fix on stretched tools image 1.2

--- a/main.css
+++ b/main.css
@@ -131,7 +131,6 @@
 }
 #home .projects-page div img {
   max-width: 100vw;
-  height: auto;
 }
 #home .projects-page h1 {
   margin-left: 40px;
