--- a/sass/_styles.scss
+++ b/sass/_styles.scss
@@ -163,7 +163,6 @@
 
   .projects-page div img {
     max-width: 100vw;
-    height: auto;
   }
 
   .projects-page h1 {
